--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<body>
+knoppen:   daanSTEM.github.io/knoppen.html
+afbeeldingen:   daanSTEM.github.io/afbeeldingen.html
 
-<p>Browsers usually insert quotation marks around the q elementttttttttt.</p>
-
-<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
-
-</body>
-</html>
